// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > matches snapshot (with user) 1`] = `
<div>
  <div
    class="page-header"
  >
    <div>
      <h1
        class="title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-gamepad2 lucide-gamepad-2 h-10 w-10"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="6"
            x2="10"
            y1="11"
            y2="11"
          />
          <line
            x1="8"
            x2="8"
            y1="9"
            y2="13"
          />
          <line
            x1="15"
            x2="15.01"
            y1="12"
            y2="12"
          />
          <line
            x1="18"
            x2="18.01"
            y1="10"
            y2="10"
          />
          <path
            d="M17.32 5H6.68a4 4 0 0 0-3.978 3.59c-.006.052-.01.101-.017.152C2.604 9.416 2 14.456 2 16a3 3 0 0 0 3 3c1 0 1.5-.5 2-1l1.414-1.414A2 2 0 0 1 9.828 16h4.344a2 2 0 0 1 1.414.586L17 18c.5.5 1 1 2 1a3 3 0 0 0 3-3c0-1.545-.604-6.584-.685-7.258-.007-.05-.011-.1-.017-.151A4 4 0 0 0 17.32 5z"
          />
        </svg>
        Metio
      </h1>
      <p
        class="subtitle"
      >
        Minecraft Server Controller
      </p>
    </div>
    <div
      class="header-user"
    >
      <span
        class="user-email"
      >
        user@example.com
      </span>
      <a
        class="group/button inline-flex shrink-0 items-center justify-center border bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 border-border bg-background hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-7 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 text-[0.8rem] in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5"
        data-size="sm"
        data-slot="button"
        data-variant="outline"
        href="/auth/logout"
      >
        Logout
      </a>
    </div>
  </div>
</div>
`;

exports[`Header > matches snapshot (without user) 1`] = `
<div>
  <div
    class="page-header"
  >
    <div>
      <h1
        class="title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-gamepad2 lucide-gamepad-2 h-10 w-10"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="6"
            x2="10"
            y1="11"
            y2="11"
          />
          <line
            x1="8"
            x2="8"
            y1="9"
            y2="13"
          />
          <line
            x1="15"
            x2="15.01"
            y1="12"
            y2="12"
          />
          <line
            x1="18"
            x2="18.01"
            y1="10"
            y2="10"
          />
          <path
            d="M17.32 5H6.68a4 4 0 0 0-3.978 3.59c-.006.052-.01.101-.017.152C2.604 9.416 2 14.456 2 16a3 3 0 0 0 3 3c1 0 1.5-.5 2-1l1.414-1.414A2 2 0 0 1 9.828 16h4.344a2 2 0 0 1 1.414.586L17 18c.5.5 1 1 2 1a3 3 0 0 0 3-3c0-1.545-.604-6.584-.685-7.258-.007-.05-.011-.1-.017-.151A4 4 0 0 0 17.32 5z"
          />
        </svg>
        Metio
      </h1>
      <p
        class="subtitle"
      >
        Minecraft Server Controller
      </p>
    </div>
  </div>
</div>
`;
